Páginas GA e Probest prontas

--- a/pubs.bib
+++ b/pubs.bib
@@ -2,7 +2,7 @@
 @INPROCEEDINGS{do06:_ontol_approac_formal_infor_secur_polic,
 	url = {https://ieeexplore.ieee.org/document/4031261},
 	timestamp = {2023-08-07 18:59:16 (-03)},
-	author = {Fernando Naufel do Amaral and Bazilio, Carlos and Hamazaki Da Silva, Geiza Maria and Rademaker, Alexandre and Haeusler, Edward Hermann},
+	author = {Fernando Naufel do Amaral and C. Bazilio and G.M.H. da Silva and A. Rademaker and E.H. Haeusler},
 	booktitle = {2006 10th IEEE International Enterprise Distributed Object Computing Conference Workshops (EDOCW'06)},
 	title = {An Ontology-based Approach to the Formalization of Information Security Policies},
 	year = {2006},
@@ -153,7 +153,7 @@
 	address = {Rio de Janeiro, Rio de Janeiro},
 	url = {ftp://ftp.inf.puc-rio.br/pub/docs/techreports/07_25_rademaker.pdf},
 	abstract = {Description Logics is a family of formalisms used to represent knowledge of a domain. In contrast with others knowledge representation systems, Description Logics are equipped with a formal, logic-based semantics. Knowledge representation systems based on description logics provide various inference capabilities that deduce implicit knowledge from the explicitly represented knowledge. We present a sequent calculus for ALC, a basic Description Logic. The first motivation  for developing such a system is the extraction of computational content of ALC proofs. The present calculus is an intermediate step towards a Natural Deduction System for ALC.},
-	author = {Alexandre Rademaker and Fernando Náufel do Amaral and E.H. Haeusler},
+	author = {A. Rademaker and Fernando Náufel do Amaral and E.H. Haeusler},
 	ftp = {ftp://ftp.inf.puc-rio.br/pub/docs/techreports/07_25_rademaker.pdf <ftp://ftp.inf.puc-rio.br/pub/docs/techreports/07_25_rademaker.pdf>},
 	institution = {Depto. de Informática, PUC-Rio},
 	number = {25/07},
@@ -178,7 +178,7 @@
 	isbn = {978-972-789-299-0},
 	url = {https://fnaufel.github.io/publications/fnaufel-sb-games-2009.pdf},
 	address = {Rio de Janeiro, Rio de Janeiro},
-	author = {Alex F.V. Machado and Fernando Náufel do Amaral and Esteban W. Clua},
+	author = {A.F.V. Machado and Fernando Náufel do Amaral and E.W. Clua},
 	booktitle = {Conferência de Ciências e Artes dos Videojogos 2009},
 	title = {A Trivial Study Case of the Application of Ontologies in Electronic Games},
 	year = {2009}
@@ -227,7 +227,7 @@
 	url = {https://fnaufel.github.io/publications/fnaufel-vorte-06.pdf},
 	address = {Hong Kong, China},
 	abstract = {We present the structure of an ontology for Information Security (IS) and discuss a paradigm whereby it can be used to extract knowledge from natural language texts such as IS standards, security policies and security control descriptions. Besides providing a vocabulary for the IS domain, the proposed ontology stores logical forms corresponding to statements in the text, as well as a set of axioms used for inference in description logic (DL). We also describe a tool to provide automatic support for the formalization process.},
-	author = {Fernando Náufel do Amaral and Carlos Bazílio and Geiza Maria Hamazaki da Silva and Alexandre Rademaker and Edward Hermann Haeusler},
+	author = {Fernando Náufel do Amaral and C. Bazílio and G.M.H. da Silva and A. Rademaker and E.H. Haeusler},
 	booktitle = {Workshop on Vocabularies, Ontologies, and Rules for the Enterprise (VORTE)},
 	title = {An Ontology-based Approach to the Formalization of Information Security Policies},
 	year = {2006}
