--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,13 @@
 ---
-title: "Posts"
+title: "Todas as postagens"
 listing:
   contents: posts
   sort: "date desc"
-  type: default
+  type: grid
   categories: true
   sort-ui: true
   filter-ui: true
+  date-format: short
 page-layout: full
 title-block-banner: true
 ---
